# HoneyBee

./: .gitignore  CMakeLists.txt  HBContext.hpp  HBEgl.cpp  HBEgl.hpp  HBGlobal.hpp  HBHelper.cpp  HBHelper.hpp  HBMesh.cpp  HBMesh.hpp  HBModel.cpp  HBModel.hpp  HBShader.cpp  HBShader.hpp  HBText.cpp  HBText.hpp  Imx6.pro  Main.cpp  Main_Imx6.cpp  README.md  fragShader.fs  lightFragShader.fs  lightVertexShader.vs  textVertexShader.vs  vertexShader.vs
Model/x5/: BMW.mtl
Platform/Imx6/: EglAdapter.cpp  EglAdapter.hpp
Platform/X11/: EglAdapter.cpp  EglAdapter.hpp
Shader/: textFragShader.fs  textVertexShader.vs
X11/: EglAdapter.hpp
x5/: BMW.mtl
